Updated LocalFileAccess to use more modern Java features.